# pyfilebrowser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pre_commit.sh  pyproject.toml  release_notes.rst  requirements.txt  settings.py  squire.py
.github/workflows/: build-publish.yml  markdown.yml  python-publish.yml
doc_gen/: conf.py  index.rst
docs/: README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: README.md.txt  index.rst.txt
filebrowser/: main.py  squire.py
filebrowser/modals/: config.py  users.py
modals/: config.py  models.py  users.py
pyfb/: __init__.py  main.py  squire.py
pyfb/modals/: config.py  users.py
pyfilebrowser/: __init__.py  container.py  downloader.py  main.py  requirements.txt  squire.py
pyfilebrowser/modals/: config.py  models.py  pydantic_config.py  settings.py  users.py
pyfilebrowser/proxy/: __init__.py  database.py  error.html  error.py  main.py  rate_limit.py  secure.py  server.py  settings.py  squire.py  warn.html
pyfilebrowser/proxy/templates/: __init__.py  error.html  templates.py  warn.html
pyfilebrowser/squire/: download.py  downloader.py  otp.py  steward.py  struct.py  subtitles.py
samples/: .config.env  .container.env  .github.env  .proxy.env  .user1.env  .user2.env  README.md  extra.yaml  proxy.env  user1.env  user2.env
